# Java-Injector

./: .gitignore  build.gradle.kts  gradle.properties  readme.md  settings.gradle.kts
common/: build.gradle.kts
injection-target-linux/: CMakeLists.txt  build.gradle.kts
injection-target-linux/src/main/cpp/: somain.cpp
injection-target-windows/: CMakeLists.txt  build.gradle.kts
injection-target-windows/src/main/cpp/: dllmain.cpp
injection-target-windows/src/main/public/: dllmain.h
native-agent/: build.gradle.kts
native-agent-linux/: CMakeLists.txt  build.gradle.kts
native-agent-linux/src/main/cpp/: me_fan87_javainjector_NativeInstrumentation.cpp  me_fan87_javainjector_NativeInstrumentation.h  type_convert.cpp
native-agent-native/: build.gradle.kts
native-agent-native/src/main/cpp/: me_fan87_javainjector_NativeInstrumentation.cpp
native-agent-native/src/main/headers/: type_convert.h
native-agent-native/src/main/public/: me_fan87_javainjector_NativeInstrumentation.h
native-agent/src/main/java/: me_fan87_javainjector_JNIBinding.h  me_fan87_javainjector_NativeInstrumentation.h
native-injector/: build.gradle.kts
native-injector-linux/: CMakeLists.txt  build.gradle.kts
native-injector-linux/src/main/cpp/: me_fan87_javainjector_JavaInjector.cpp
native-injector/libs/: injector-static.lib
native-injector/src/main/cpp/: me_fan87_javainjector_JavaInjector.cpp
native-injector/src/main/public/: me_fan87_javainjector_JavaInjector.h
test-inject-target/: build.gradle.kts
test-inject-target/src/main/java/: Main.java
test-program/: build.gradle.kts
(+8 files in other folders)
